--- a/main.css
+++ b/main.css
@@ -1,93 +1,43 @@
 html {
-  width: auto !important;
-  height: auto !important;
+  width:auto !important;
+  height:auto !important;
 }
 
 body {
-  background-color: #f9f9f9;
-  color: #121212;
-  height: auto !important;
-  width: auto !important;
-  font-family: "Source Sans Pro", sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.4;
-}
-
-img {
-  max-width: 100%;
-}
-
-a {
-  color: #00a4b2;
-  text-decoration: none;
+  height:auto !important;
+  width:auto !important;
+  font-family: 'Open Sans', sans-serif;
+  color: #333;
 }
 
 h1 {
-  color: #f9f9f9;
-  font-family: "Source Serif Pro", serif;
-  font-weight: 400;
-  font-size: 28px;
-  line-height: 1.2;
+  font-size: 3rem;
+  font-weight: bold;
 }
 
 h2 {
-  border-bottom: 2px solid #ccc;
-  color: #121212;
-  font-family: "Source Serif Pro", serif;
-  font-size: 28px;
-  font-weight: 600;
-  line-height: 1.2;
-  padding-bottom: 20px;
+    color: #fff;
+    font-size: 1.6875rem;
+    line-height: 1.75rem;
 }
 
 h3 {
-  color: #121212;
-  font-family: "Source Serif Pro", serif;
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 1.3;
-}
-
-.h3--sans-serif {
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 700;
-  line-height: 1.3;
+  font-size: 1.4375rem;
+  font-weight: bold;
 }
 
 h4 {
-  color: #ccc;
-  font-family: "Source Serif Pro", serif;
-  font-size: 21px;
-  font-weight: 700;
-  line-height: 1.3;
-  margin-bottom: 10px;
+  font-size: 1.125rem;
+  font-weight: bold;
 }
 
-.h4--sans-serif {
-  color: #feb24c;
-  font-family: "Source Sans Pro", sans-serif;
-}
-
-.caption {
-  color: #444;
-  font-size: 12px;
-  line-height: 1.4;
-}
-
-.caps {
-  text-transform: uppercase;
-  letter-spacing: 0.8px;
-  font-weight: 700;
+h5 {
+  font-size: 1.2rem;
 }
 
 .caps {
   text-transform: uppercase;
   letter-spacing: 3px;
-}
-
-.content-container {
-  padding: 0 10px 10px;
 }
 
 .top-header {
@@ -96,7 +46,7 @@ h4 {
 
 .title-header {
   padding: 5px;
-  background-color: #444;
+  background-color: #666;
   text-align: center;
 }
 
@@ -109,27 +59,15 @@ h4 {
   color: #333;
   max-width: 1000px;
   margin: 0 auto;
-  text-align: center;
 }
 
 .locations {
-  display: flex;
-  flex-direction: column;
-}
-
-.location {
-  flex: 0 1 400px;
-  margin: 10px 0;
-  padding: 10px 0;
-  background-color: #fff;
+  padding: 1rem;
 }
 
 .geek-box {
-  display: flex;
-  flex-direction: column;
-  background-color: #333;
-  color: #f9f9f9;
-  padding: 10px;
+  background-color: #666;
+  color: #fff;
 }
 
 .geek-box h3 {
@@ -138,29 +76,4 @@ h4 {
 
 .geek-box a, .geek-box a:hover .geek-box a:visited {
   color: #ffffb2
-}
-
-@media only screen and (min-width: 670px) {
-  .locations, .geek-box {
-    flex-direction: row;
-  }
-
-  .location {
-    margin: 0 10px;
-    padding: 0 10px;
-  }
-
-  .content-container {
-    margin: 0 auto;
-    max-width: 1080px;
-    padding: 40px;
-  }
-
-  h1, h2 {
-    font-size: 32px;
-  }
-
-  h3, h4 {
-    font-size: 24px;
-  }
 }
