--- a/main.css
+++ b/main.css
@@ -127,9 +127,16 @@ h4 {
 .geek-box {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
   background-color: #333;
   color: #f9f9f9;
   padding: 10px;
+}
+
+.geek-box-item {
+  flex: 0 1 400px;
+  margin: 10px 0;
+  padding: 10px 0;
 }
 
 .geek-box h3 {
@@ -145,7 +152,7 @@ h4 {
     flex-direction: row;
   }
 
-  .location {
+  .location, .geek-box-item {
     margin: 0 10px;
     padding: 0 10px;
   }
